Set body background: cover cropping, centered, fixed

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,6 +26,11 @@
 body {
   font-family: var(--font-sans);
   background: var(--color-bg);
+  background-image: url('/Learning-Blog/assets/images/Bg_Norway_lofoten_mountains.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   color: var(--color-text);
   line-height: 1.7;
   font-size: 16px;
